--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <main>
         <article>
             <h1>Come creare un template per i post</h1>
-            <p><i class="fas fa-pen-square"></i> di Mario Rossi - <span><i class="fas fa-clock"></i>
+            <p id="author"><i class="fas fa-pen-square"></i> di Mario Rossi - <span><i
+                        class="fas fa-clock"></i>
                     pubblicato il
                     25-10-2020</span></p>
 
